fixed alignment of contents in Your Result

--- a/calculator/src/app/calculator/dashboard/dashboard.component.css
+++ b/calculator/src/app/calculator/dashboard/dashboard.component.css
@@ -10,3 +10,12 @@ p {
     font-size: 18px;
     text-align: justify;
 }
+
+:host ::ng-deep .slider {
+    margin-top: 2% ; 
+    width: 100%;
+}
+
+.result {
+    text-align: center;
+}
